Fix spacing between elements

--- a/lesson2/styles/small.css
+++ b/lesson2/styles/small.css
@@ -26,7 +26,7 @@ div {
     border-top-right-radius: 25px;
     background-color: #F5F3C1;
     margin: 10px 0px;
-
+    padding: 15px;
     
 }
 
@@ -38,13 +38,17 @@ h3 {
 img {
     height: auto;
     width: 98%;
-    margin-left: 4px;
-    margin-top: 5px;
+    /* margin-left: 4px; */
+    margin-top: 30px;
+    padding: 10px;
 }
 
+a {
+    padding: 10px;
+}
 div p {
     color: black;
-    margin: 10px;
+    margin: 20px 10px;
     align-self: start;
 }
 
